--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,11 @@
 	<string name="speed_format">%s m/s</string>
 	<string name="accuracy_format">%s m</string>
 	<string name="altitude_format">%s m</string>
-	<string name="loading">Loading...</string>
 	<string name="provider_label">Provider</string>
 	<string name="speed_label">Speed</string>
 	<string name="accuracy_label">Accuracy</string>
 	<string name="altitude_label">Altitude</string>
 	<string name="latitude_label">Latitude</string>
 	<string name="longitude_label">Longitude</string>
+	<string name="loading">Loading…</string>
 </resources>
